[package]
name = "gig"
version = "0.1.0"
authors = ["Corey Batchler <coreybatchler7@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A command-line tool for offline standard templated gitignore file generation."
repository = "https://github.com/trithagoras/gig"
readme = "README.md"
keywords = ["cli", "tool"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
once_cell = "1.19.0"
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
walkdir = "2.5.0"
